Pickup/Return added

--- a/conf/odoo.conf
+++ b/conf/odoo.conf
@@ -1,6 +1,6 @@
 [options]
 addons_path = C:\Program Files\Odoo14\server\odoo\addons,C:\Users\IBRA\Desktop\rental\Rental\custom
-admin_passwd = $pbkdf2-sha512$25000$jdG6NwZAyNmbcw5BKOXcmw$1mvGz9lei7C22wfzsLNwSJGrmh4mtIOVgDPxiTS7.Tv26sKtmbKGrEWPTldluFCtLfVn4ASqhtstnIXrU10BDg
+admin_passwd = $pbkdf2-sha512$25000$xljLudf6vxeC8D6n9N5baw$IQjDYCsXr1FEzgb/ZUEVkg.NUnWLB1NLGLOXVIGmC7ETh6CR2nYt.VTgQGvHsMRXPt4YRZwYwr2iDAJVgp688A
 bin_path = C:\Program Files\Odoo14\thirdparty
 csv_internal_sep = ,
 data_dir = C:\Users\IBRA\AppData\Local\OpenERP S.A\Odoo
